Fix formatting to wrap note body

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -32,54 +32,54 @@
 }
 
 .mtgnote{
-  background-image: image-url('inactive_icons/mtgnote.png')
+  background-image: image-url('inactive_icons/mtgnote.png');
 }
 .mtgnote:hover{
-  background-image: image-url('hover_icons/mtgnote.png')
+  background-image: image-url('hover_icons/mtgnote.png');
 }
 
 .plus{
-  background-image: image-url('inactive_icons/plus.png')
+  background-image: image-url('inactive_icons/plus.png');
 }
 .plus:hover{
-  background-image: image-url('hover_icons/plus.png')
+  background-image: image-url('hover_icons/plus.png');
 }
 
 .search{
-  background-image: image-url('inactive_icons/search.png')
+  background-image: image-url('inactive_icons/search.png');
 }
 .search:hover{
-  background-image: image-url('hover_icons/search.png')
+  background-image: image-url('hover_icons/search.png');
 }
 
 
 
 .star{
-  background-image: image-url('inactive_icons/star.png')
+  background-image: image-url('inactive_icons/star.png');
 }
 .star:hover{
-  background-image: image-url('hover_icons/star.png')
+  background-image: image-url('hover_icons/star.png');
 }
 
 .note{
-  background-image: image-url('inactive_icons/note.png')
+  background-image: image-url('inactive_icons/note.png');
 }
 .note:hover{
-  background-image: image-url('hover_icons/note.png')
+  background-image: image-url('hover_icons/note.png');
 }
 
 .notebook{
-  background-image: image-url('inactive_icons/notebook.png')
+  background-image: image-url('inactive_icons/notebook.png');
 }
 .notebook:hover{
-  background-image: image-url('hover_icons/notebook.png')
+  background-image: image-url('hover_icons/notebook.png');
 }
 
 .tag{
-  background-image: image-url('inactive_icons/tag.png')
+  background-image: image-url('inactive_icons/tag.png');
 }
 .tag:hover{
-  background-image: image-url('hover_icons/tag.png')
+  background-image: image-url('hover_icons/tag.png');
 }
 
 
@@ -126,7 +126,7 @@
   cursor: pointer;
   text-align:center;
   line-height:70px;
-  background: #f8f8f8
+  background: #f8f8f8;
 }
 
 .user-popup{
