--- a/app/assets/stylesheets/notes-pane.scss
+++ b/app/assets/stylesheets/notes-pane.scss
@@ -175,6 +175,9 @@ font-size: 14px;
   padding-bottom:3px;
 }
 
+.body-of-note{
+  width: 200px;
+}
 
 .note-icon{
   height: 24px;
