--- a/app/assets/stylesheets/text_editor.scss
+++ b/app/assets/stylesheets/text_editor.scss
@@ -14,12 +14,11 @@
 .text-editor-content{
   width: 100%;
   margin:auto;
-  background: blue;
   border-top:1px solid #ececec;
-  padding:20px 30px 0px 30px;
+  padding:20px 0px 0px 30px;
   box-sizing:border-box;
-  display:flex;
-  flex-direction:column;
+  // display:flex;
+  // flex-direction:column;
   height:100%
 };
 
@@ -34,6 +33,7 @@ form{
 .editor-note-title{
   display:block;
   margin:0;
+  padding: 0 30px 0 0;
   border-radius:0;
   border:none;
   font-family:'Scope One';
@@ -53,7 +53,6 @@ form{
 
 .editor-note-body{
   height:100%;
-  background:red;
 }
 
 textarea {
